ETCM-8833 renmove checkout of pc tests and runnint tests from docker container

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -91,31 +91,16 @@ runs:
           --json-report-summary \
           --junitxml=junit_report.xml"
 
-        if [[ "${{ inputs.local-environment }}" == "true" ]]; then
-          echo "Running tests via docker exec"
-          docker exec tests bash -c "
-            cd /e2e-tests &&
-            source venv/bin/activate &&
-            $pytest_cmd
-          "
-        else
-          echo "Running tests locally"
-          cd e2e-tests
-          source venv/bin/activate
-          eval "$pytest_cmd"
-        fi
-    - name: Copy .report.json if run with docker exec
-      if: ${{ inputs.local-environment == 'true' }}
-      run: |
-        echo "Copy test results from docker container"
-        mkdir -p e2e-tests
-        docker cp tests:/e2e-tests/.report.json e2e-tests/.report.json
-      shell: bash
+
+        echo "Running tests locally"
+        cd E2E-tests
+        source venv/bin/activate
+        eval "$pytest_cmd"
     - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
         name: test-results
-        path: e2e-tests/.report.json
+        path: E2E-tests/.report.json
         overwrite: true
         if-no-files-found: error
         include-hidden-files: true
