--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -44,18 +44,9 @@ runs:
         path: dev/local-environment/configurations/pc-contracts-cli/overrides/
     - name: Setup E2E tests directory
       run: |
-        # Debug: Show current working directory and contents
-        echo "Current directory:"
-        pwd
-        ls -la
-        
-        # Debug: Show dev/local-environment contents
-        echo "dev/local-environment contents:"
-        ls -la dev/local-environment
-        
-        # Copy E2E tests
-        mkdir -p dev/local-environment/configurations/tests/E2E-tests
-        cp -r E2E-tests/* dev/local-environment/configurations/tests/E2E-tests/
+        # # Copy E2E tests
+        # mkdir -p dev/local-environment/configurations/tests/E2E-tests
+        # cp -r E2E-tests/* dev/local-environment/configurations/tests/E2E-tests/
         
         # Debug: Verify docker-compose.yml
         echo "Looking for docker-compose.yml:"
@@ -77,17 +68,9 @@ runs:
         
         cd dev/local-environment
         
-        # Debug: Show Docker Compose configuration
-        echo "Docker Compose configuration:"
-        docker compose config
-        
         bash setup.sh --non-interactive --overrides --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests
         
         docker compose up -d
-        
-        # Debug: Show container details
-        echo "Container details:"
-        docker inspect tests
         
         cd ../../
       shell: bash
