--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -112,7 +112,7 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: test-results
-        path: E2E-tests/.report.json
+        path: e2e-tests/.report.json
         overwrite: true
         if-no-files-found: error
         include-hidden-files: true
