--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -91,21 +91,27 @@ runs:
           --json-report-summary \
           --junitxml=junit_report.xml"
 
-        echo "Running tests locally"
-        cd E2E-tests
-        echo "Print DIR Contents"
-        ls -la
-        
-        # Set up Python virtual environment
-        echo "Setting up Python virtual environment..."
-        python -m venv venv
-        source venv/bin/activate
-        
-        # Install requirements
-        echo "Installing requirements..."
-        pip install -r requirements.txt
-        
-        # Run the tests
+        if [[ "${{ inputs.local-environment }}" == "true" ]]; then
+          echo "Running tests via docker exec"
+          docker exec tests bash -c "
+            cd /e2e-tests &&
+            source venv/bin/activate &&
+            $pytest_cmd
+          "
+        else
+          echo "Running tests locally"
+          cd e2e-tests
+          source venv/bin/activate
+          eval "$pytest_cmd"
+        fi
+
+    - name: Copy .report.json if run with docker exec
+      if: ${{ inputs.local-environment == 'true' }}
+      run: |
+        echo "Copy test results from docker container"
+        mkdir -p e2e-tests
+        docker cp tests:/e2e-tests/.report.json e2e-tests/.report.json
+      shell: bash
         echo "Running tests..."
         eval "$pytest_cmd"
     - name: Upload test results
