feat: move all dev related files to ./dev
This is to mimic the cleanup in
https://github.com/input-output-hk/partner-chains/pull/69 without the
earthly changes.

--- a/.envrc
+++ b/.envrc
@@ -5,11 +5,11 @@ export RUN_DIR="$(pwd)/.run"
 export DATA_DIR="$RUN_DIR/data"
 mkdir -p $DATA_DIR
 chmod 777 $RUN_DIR $DATA_DIR
-export CARDANO_CONFIG_DIR="$(pwd)/docker/config"
+export CARDANO_CONFIG_DIR="$(pwd)/dev/docker/config"
 export KUPO_WORKDIR="$RUN_DIR/kupo-db"
 mkdir -p $KUPO_WORKDIR
 
-source envs/devnet/.envrc
+source dev/envs/devnet/.envrc
 
 if [[ -f "$PWD/.envrc.local" ]]; then
   echo using local envrc
