--- a/toolkit/offchain/Cargo.toml
+++ b/toolkit/offchain/Cargo.toml
@@ -16,10 +16,13 @@ cardano-serialization-lib = { workspace = true }
 cbor_event = { workspace = true }
 chain-params = { workspace = true, features = ["std"] }
 db-sync-follower = { workspace = true, features = ["candidate-source"] }
+ed25519 = { workspace = true, features = ["alloc"]}
+ed25519-zebra  = { workspace = true}
 fraction = { workspace = true }
 hex = { workspace = true }
 hex-literal = { workspace = true }
 jsonrpsee = { workspace = true, features = ["client-core", "http-client", "macros"] }
+log = { workspace = true }
 minicbor = { workspace = true }
 ogmios-client = { workspace = true, features = ["jsonrpsee-client"] }
 pallas-addresses = { workspace = true }
@@ -34,5 +37,6 @@ sidechain-domain = { workspace = true, features = ["std"] }
 uplc = { workspace = true }
 
 [dev-dependencies]
+proptest = { workspace = true }
 tokio = { workspace = true }
 pretty_assertions = { workspace = true }
