ETCM-8833 Run tests from Partner-Chains Repo (#218)
* ETCM-8833 renmove checkout of pc tests and runnint tests from docker container

* ETCM-8833 debug

* ETCM-8833 debug

* ETCM-8833 setup up python virtual env

* ETCM-8833 copy tests into container

* ETCM-8833 add back code to run tests

* ETCM-8833 add back code to run tests

* ETCM-8833 fix copy

* ETCM-8833 fix shell config

* ETCM-8833 chore: update tools-host after recreating pod PR#350 sidechains-tests

* ETCM-8833
chore: v1.3.0-rc1 deployment PR#341 sidechains-tests

* ETCM-8833 fix: add xray link to slack only if xray id is available (ETCM-8812) #342 sidechains-tests

* [ETCM-8774] fix: thread-safe update_db_with_active_candidates #339 sidechains-tests

* add: deployment-mc-epoch arg option #338 sidechains-tests

* ETCM-8664 - update cardano-cli commands for cardano-node 10.1.2 for chang+1 HF sidechains-tests

* sidechains-tests temp marker for block tests #347

* sidechains-tests fix: add missing keys for staging to binary host #352

* ETCM-8833 fix exitcode for earthfile

* ETCM-8833 fix exitcode file for passing and failing of tests

* ETCM-8833 undo unneeded code changes

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -104,13 +104,15 @@ runs:
           source venv/bin/activate
           eval "$pytest_cmd"
         fi
-    - name: Copy .report.json if run with docker exec
+
+    - name: Copy test results
       if: ${{ inputs.local-environment == 'true' }}
+      shell: bash
       run: |
         echo "Copy test results from docker container"
         mkdir -p e2e-tests
         docker cp tests:/e2e-tests/.report.json e2e-tests/.report.json
-      shell: bash
+
     - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
