--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -42,27 +42,12 @@ runs:
       with:
         name: partner-chains-node-artifact
         path: dev/local-environment/configurations/pc-contracts-cli/overrides/
-    - name: checkout pc-tests ref_name branch
-      id: pc-tests
-      uses: actions/checkout@v4
-      continue-on-error: true
-      with:
-        repository: input-output-hk/sidechains-tests
-        token: ${{ env.ACTIONS_PAT }}
-        ref: ${{ github.head_ref || github.ref_name }}
-        path: dev/local-environment/configurations/tests/e2e-tests
-    - name: checkout pc-tests master (fallback)
-      if: steps.pc-tests.outcome == 'failure'
-      uses: actions/checkout@v4
-      with:
-        repository: input-output-hk/sidechains-tests
-        token: ${{ env.ACTIONS_PAT }}
-        ref: master
-        path: dev/local-environment/configurations/tests/e2e-tests
     - name: Deploy local environment with overrides
       run: |
         mv dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-cli-artifact dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-cli
         mv dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-node-artifact dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-node
+        mkdir -p dev/local-environment/configurations/tests/e2e-tests
+        cp -r E2E-tests/* dev/local-environment/configurations/tests/e2e-tests
         cd dev/local-environment
         bash setup.sh --non-interactive --overrides --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests
         docker compose up -d
