--- a/dev/envs/devnet/.envrc
+++ b/dev/envs/devnet/.envrc
@@ -11,9 +11,9 @@ export SIDECHAIN_BLOCK_BENEFICIARY="0x000000000000000000000000000000000000000000
 
 # below exports parse config/addresses.json file, which needs to regenerated for each new sidechain by running
 # pc-contracts-cli addresses ... > config/addresses.json
-export COMMITTEE_CANDIDATE_ADDRESS=$(jq -r '.addresses.CommitteeCandidateValidator' envs/devnet/addresses.json)
-export D_PARAMETER_POLICY_ID=$(jq -r '.mintingPolicies.DParameterPolicy' envs/devnet/addresses.json)
-export PERMISSIONED_CANDIDATES_POLICY_ID=$(jq -r '.mintingPolicies.PermissionedCandidatesPolicy' envs/devnet/addresses.json)
+export COMMITTEE_CANDIDATE_ADDRESS=$(jq -r '.addresses.CommitteeCandidateValidator' dev/envs/devnet/addresses.json)
+export D_PARAMETER_POLICY_ID=$(jq -r '.mintingPolicies.DParameterPolicy' dev/envs/devnet/addresses.json)
+export PERMISSIONED_CANDIDATES_POLICY_ID=$(jq -r '.mintingPolicies.PermissionedCandidatesPolicy' dev/envs/devnet/addresses.json)
 
 # native token observability
 export NATIVE_TOKEN_POLICY_ID='ada83ddd029614381f00e28de0922ab0dec6983ea9dd29ae20eef9b4'
