--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -435,7 +435,7 @@ jobs:
       - name: Trigger Publish Workflow
         run: |
           curl -X POST \
-            -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" \
+            -H "Authorization: token ${{ secrets.ACTIONS_PUBLISH_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/publish.yml/dispatches \
             -d '{"ref": "main", "inputs": {"sha": "${{ github.sha }}", "tag": "${{ github.ref }}"}}'
