Start upgrading pc to 7.0.0, fix addresses command
Signed-off-by: Krisztian Pinter <krisztian.pinter@iohk.io>

--- a/.github/actions/deploy/argocd/manifest.yaml
+++ b/.github/actions/deploy/argocd/manifest.yaml
@@ -43,17 +43,8 @@ spec:
               value: "86400000"
             - name: MC__FIRST_SLOT_NUMBER
               value: "0"
-            # The below values can be obtained with: scripts/echo_kubernetes_yamls.sh
-            - name: CHAIN_ID
-              value: "0"
-            - name: THRESHOLD_NUMERATOR
-              value: "2"
-            - name: THRESHOLD_DENOMINATOR
-              value: "3"
-            - name: GENESIS_COMMITTEE_UTXO
+            - name: GENESIS_UTXO
               value: "67fa24dcda2ef78acf69dee758292d659493b85bf540a95b371cff4b10150359#1"
-            - name: GOVERNANCE_AUTHORITY
-              value: "88965c0bc8902c5056ca285684bc56e6498c77b6e04005cd78019175"
             - name: COMMITTEE_CANDIDATE_ADDRESS
               value: "addr_test1wrnv62hjzfj0uapagpgzuhh4nxzrvkr06y6lxyhpun32usqenuxw9"
             - name: D_PARAMETER_POLICY_ID
