--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -420,25 +420,28 @@ jobs:
           threads: 1
 
   publish:
-    if: ${{ always() && github.event.inputs.no-release != 'true' && (github.event.inputs.no-tests == 'true' || needs.run-all-tests-on-n2-epoch.result == 'success') }}
-    permissions:
-      id-token: write
-      contents: write
-      packages: write
+    if: ${{ github.event.inputs.no-release != 'true' && (github.event.inputs.no-tests == 'true' || needs.run-all-tests-on-n2-epoch.result == 'success') }}
+    runs-on: ubuntu-latest
     needs:
       - build-linux
       - build-macos-x86_64
       - build-macos-arm64
       - run-all-tests-on-n2-epoch
-    runs-on: ubuntu-latest
     steps:
-      - name: Trigger Publish Workflow
+      - name: Trigger Publish Workflow via Repository Dispatch
         run: |
           curl -X POST \
             -H "Authorization: token ${{ secrets.ACTIONS_PUBLISH_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/actions/workflows/publish.yml/dispatches \
-            -d '{"ref": "${{ github.ref_name }}", "inputs": {"sha": "${{ github.sha }}", "tag": "${{ inputs.tag }}"}}'
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -d '{
+                  "event_type": "publish",
+                  "client_payload": {
+                    "sha": "${{ github.sha }}",
+                    "tag": "${{ inputs.tag }}",
+                    "skip_release": "${{ github.event.inputs.no-release }}"
+                  }
+                }'
 
 #  deploy-staging-preprod:
 #    if: ${{ github.event.inputs.no-deploy != 'true' }}
