--- a/.github/actions/images/build-and-publish-ghcr/action.yml
+++ b/.github/actions/images/build-and-publish-ghcr/action.yml
@@ -1,5 +1,6 @@
-name: "Build and Publish to GHCR"
-description: "Builds the partner-chains-node Docker image and pushes it to GHCR."
+name: "Publish to GHCR"
+description: "Pulls the partner-chains-node Docker image from ECR and pushes it to GHCR with appropriate tags."
+
 inputs:
   sha:
     description: "Commit SHA"
@@ -13,59 +14,38 @@ outputs: {}
 runs:
   using: "composite"
   steps:
-    - name: Download partner-chains-node-linux-artifact
-      uses: actions/download-artifact@v4
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
-        name: partner-chains-node-linux-artifact
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Write Dockerfile
-      run: |
-        cat > Dockerfile <<EOF
-        FROM debian:bookworm-slim
-        RUN apt-get update && apt-get install -y \\
-            ca-certificates \\
-            libgcc-s1 \\
-            libstdc++6 \\
-            libc6 \\
-            libssl3 \\
-            zlib1g \\
-            libgomp1 \\
-            && rm -rf /var/lib/apt/lists/*
-        RUN useradd -m -u 1000 -U -s /bin/sh -d /substrate substrate \\
-            && mkdir -p /data /substrate/.local/share/partner-chains-node \\
-            && chown -R substrate:substrate /data /substrate \\
-            && ln -s /data /substrate/.local/share/partner-chains-node
-        COPY ./partner-chains-node-${{ inputs.tag }}-x86_64-linux /usr/local/bin/partner-chains-node
-        RUN chown substrate:substrate /usr/local/bin/partner-chains-node \\
-            && chmod +x /usr/local/bin/partner-chains-node
-        USER substrate
-        EXPOSE 30333 9615 9933 9944
-        VOLUME ["/data"]
-        ENTRYPOINT ["/usr/local/bin/partner-chains-node"]
-        EOF
-      shell: bash
+    - name: Login to Amazon ECR
+      uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build Docker Image
+    - name: Pull Docker Image from ECR
       run: |
-        docker build -t substrate-node:latest .
+        docker pull ${{ env.ECR_REGISTRY_SECRET }}/substrate-node:${{ inputs.sha }}
       shell: bash
 
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: ${{ env.GITHUB_ACTOR }}
-        password: ${{ env.GITHUB_TOKEN }}
-        logout: true
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Tag and Push Image to GHCR
+    - name: Tag Docker Image for GHCR
       run: |
-        docker tag substrate-node:latest ghcr.io/${{ github.repository }}/partner-chains-node:latest
-        docker tag substrate-node:latest ghcr.io/${{ github.repository }}/partner-chains-node:${{ inputs.sha }}
-        docker tag substrate-node:latest ghcr.io/${{ github.repository }}/partner-chains-node:${{ inputs.tag }}
+        docker tag ${{ env.ECR_REGISTRY_SECRET }}/substrate-node:${{ inputs.sha }} ghcr.io/${{ github.repository }}/partner-chains-node:latest
+        docker tag ${{ env.ECR_REGISTRY_SECRET }}/substrate-node:${{ inputs.sha }} ghcr.io/${{ github.repository }}/partner-chains-node:${{ inputs.sha }}
+        docker tag ${{ env.ECR_REGISTRY_SECRET }}/substrate-node:${{ inputs.sha }} ghcr.io/${{ github.repository }}/partner-chains-node:${{ inputs.tag }}
+      shell: bash
 
+    - name: Push Tagged Images to GHCR
+      run: |
         docker push ghcr.io/${{ github.repository }}/partner-chains-node:latest
         docker push ghcr.io/${{ github.repository }}/partner-chains-node:${{ inputs.sha }}
         docker push ghcr.io/${{ github.repository }}/partner-chains-node:${{ inputs.tag }}
       shell: bash
-
