--- a/.github/actions/images/publish-ghcr/action.yml
+++ b/.github/actions/images/publish-ghcr/action.yml
@@ -14,15 +14,16 @@ outputs: {}
 runs:
   using: "composite"
   steps:
-    - name: Configure AWS Credentials
+    - name: Acquire AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        role-to-assume: ${{ env.AWS_ROLE_ARN_SECRET }}
+        aws-region: ${{ env.AWS_REGION }}
 
-    - name: Login to Amazon ECR
-      uses: aws-actions/amazon-ecr-login@v1
+    - name: Login to ECR
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.ECR_REGISTRY_SECRET }}
 
     - name: Pull Docker Image from ECR
       run: |
