--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,10 +30,9 @@ jobs:
           sha: ${{ github.event.inputs.sha }}
           tag: ${{ github.event.inputs.tag }}
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_REGION: "eu-central-1"
           ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
+          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
 
   publish-release:
     runs-on: ubuntu-latest
