--- a/toolkit/primitives/authority-selection-inherents/Cargo.toml
+++ b/toolkit/primitives/authority-selection-inherents/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hex = { workspace = true }
 async-trait = { workspace = true, optional = true }
 frame-support = { workspace = true }
 log = { workspace = true }
