--- a/.github/actions/images/publish-ghcr/action.yml
+++ b/.github/actions/images/publish-ghcr/action.yml
@@ -35,7 +35,7 @@ runs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ env.GITHUB_TOKEN }}
 
     - name: Tag Docker Image for GHCR
       run: |
