--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -437,7 +437,7 @@ jobs:
             -H "Authorization: token ${{ secrets.ACTIONS_PUBLISH_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/publish.yml/dispatches \
-            -d '{"ref": "${{ github.ref_name }}", "inputs": {"sha": "${{ github.sha }}", "tag": "${{ inputs.tag }}"}}'
+            -d '{"ref": "${{ github.ref_name }}", "inputs": {"sha": "${{ inputs.sha }}", "tag": "${{ inputs.tag }}"}}'
 
 #  deploy-staging-preprod:
 #    if: ${{ github.event.inputs.no-deploy != 'true' }}
