--- a/.github/actions/release/create-draft-release/action.yml
+++ b/.github/actions/release/create-draft-release/action.yml
@@ -65,12 +65,10 @@ runs:
 
         if echo "$release_response" | grep -q '"message": "Not Found"'; then
           echo "release_exists=false" >> $GITHUB_ENV
-          echo "::set-output name=release_exists::false"
+          echo "release_id=" >> $GITHUB_ENV
         else
           echo "release_exists=true" >> $GITHUB_ENV
-          echo "::set-output name=release_exists::true"
           echo "release_id=$(echo $release_response | jq -r .id)" >> $GITHUB_ENV
-          echo "::set-output name=release_id::$(echo $release_response | jq -r .id)"
         fi
       shell: bash
 
@@ -91,7 +89,6 @@ runs:
                           -d '{"tag_name": "'$tag'", "name": "'$release_name'", "body": "'"$release_body"'", "draft": true, "generate_release_notes": true, "prerelease": true}' \
                           "https://api.github.com/repos/${{ github.repository }}/releases")
         echo "release_id=$(echo $release_response | jq -r .id)" >> $GITHUB_ENV
-        echo "::set-output name=release_id::$(echo $release_response | jq -r .id)"
       shell: bash
 
     - name: Upload artifacts to release
