--- a/.github/actions/release/publish-draft-release/action.yml
+++ b/.github/actions/release/publish-draft-release/action.yml
@@ -48,7 +48,7 @@ runs:
           json_data=$(jq -n \
             --arg name "$tag" \
             --arg body "$updated_body" \
-            '{"draft": false, "prerelease": false, "name": $name, "body": $body}')
+            '{"draft": false, "prerelease": false, "name": $name, "body": $body, "make_latest": "true"}')
           response=$(curl -s -X PATCH -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
             -d "$json_data" \
             "https://api.github.com/repos/${{ github.repository }}/releases/$release_id")
@@ -63,4 +63,3 @@ runs:
           echo "Release does not exist, skipping publish step."
         fi
       shell: bash
-
