bugfix: fix path to report_slack.sh

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,7 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-pre-merge
         run: |
+          cd E2E-tests
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
@@ -308,6 +309,7 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-post-merge
         run: |
+          cd E2E-tests
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
