--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,11 @@ jobs:
     if: always() && needs.local-environment-tests.result != 'skipped'
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
       - name: Download test report
         uses: actions/download-artifact@v4
         with:
@@ -115,8 +120,6 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-pre-merge
         run: |
-          cd ..
-          ls -la
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
@@ -273,7 +276,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # Use the merge commit SHA for post-merge testing
           ref: ${{ github.event.pull_request.merge_commit_sha || github.sha }}
       - name: Deploy and test against local environment
         uses: ./.github/actions/tests/local-environment-tests
@@ -296,6 +298,11 @@ jobs:
     if: always() && needs.local-environment-tests-post-merge.result != 'skipped'
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.merge_commit_sha || github.sha }}
       - name: Download test report
         uses: actions/download-artifact@v4
         with:
@@ -310,8 +317,7 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-post-merge
         run: |
-          cd ..
-          ls -la
+          cd E2E-tests
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
