--- a/.github/actions/release/create-draft-release/action.yml
+++ b/.github/actions/release/create-draft-release/action.yml
@@ -83,30 +83,8 @@ runs:
         release_body+="- [x] Local environment\n"
         release_body+="- [ ] Staging preview environment\n"
         release_body+="- [ ] Staging preprod environment\n\n"
-        release_body+="Please note: this release is not yet fully verified and is pending further testing.\n\n"
-    
-        release_body+="## Compatibility matrix\n"
-        release_body+="| partner-chains-node | partner-chains-smart-contracts | cardano-node | cardano-db-sync | kupo | ogmios |\n"
-        release_body+="| -------------------- | -------------------------------- | --------------- | ------------------ | ----- | ------- |\n"
-        release_body+="| $tag |  |  |  |  |  |\n\n"
-    
-        release_body+="## Binaries\n\n"
-        release_body+="You can download the archives that contain both \`partner-chains-node\` and \`partner-chains-cli\` from assets attached to this release (available for MacOS and Linux architectures). PC smart contracts CLI can be downloaded from [here](https://github.com/input-output-hk/partner-chains-smart-contracts).\n\n"
-    
-        release_body+="## Docker\n\n"
-        release_body+="You can also pull the Docker image of the \`partner-chains-node\` from GitHub Container Registry:\n\n"
-        release_body+="\`\`\`bash\n"
-        release_body+="docker pull ghcr.io/input-output-hk/partner-chains/partner-chains-node:$tag\n"
-        release_body+="\`\`\`\n\n"
-    
-        release_body+="## How to Use\n\n"
-        release_body+="Refer to the [documentation](https://github.com/input-output-hk/partner-chains/tree/$tag/docs/user-guides) for detailed instructions on using the node and CLI tools.\n\n"
-    
-        release_body+="## Support\n\n"
-        release_body+="You can visit our issues page for support, feature requests, or to report a bug.\n\n"
-    
-        release_body+="Thank you for being a part of our community!\n"
-    
+        release_body+="Please note: this release is not yet fully verified and is pending further testing.\n"
+
         release_response=$(curl -s -X POST -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
                           -d '{"tag_name": "'$tag'", "name": "'$release_name'", "body": "'"$release_body"'", "draft": true, "generate_release_notes": true, "prerelease": true}' \
                           "https://api.github.com/repos/${{ github.repository }}/releases")
