bugfix: checkout current code for tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,8 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-pre-merge
         run: |
+          cd E2E-tests
+          ls -la
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
@@ -318,6 +320,7 @@ jobs:
           env: local-post-merge
         run: |
           cd E2E-tests
+          ls -la
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
