bugfix: move reports.json to E2E folder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,7 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-pre-merge
         run: |
+          mv .report.json E2E-tests/.report.json
           cd E2E-tests
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
@@ -318,6 +319,7 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-post-merge
         run: |
+          mv .report.json E2E-tests/.report.json
           cd E2E-tests
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
